<resources>
    <string name="app_name">MemoMe</string>
    <string name="title_todo">To Do</string>
    <string name="title_community">Community</string>
    <string name="title_plus">New</string>
    <string name="title_history">History</string>
    <string name="title_me">ME</string>
    <string name="title_activity_diary">Diaries</string>
    <string name="title_activity_todo">Todo Details</string>
    <string name="title_activity_gifts">All the types of my gifts</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="tab_left">Hot</string>
    <string name="tab_middle">Newest</string>
    <string name="tab_right">Surprise</string>
    <string name="return_home">Return Home</string>
    <string name="new_post_title_hint">Title</string>
    <string name="new_post_checkbox_hint">Public</string>
    <string name="new_post_hashtag_hint">#Add Hashtag</string>
    <string name="new_todo_hint">new todo</string>
    <string name="confirm_new_post">confirm</string>
    <string name="delete_post">delete</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_email_again">Please enter your email again</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_password_again">Please enter your password again</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="favorite">Gift</string>
    <string name="report">Report</string>
    <string name="scroll_view_header">All to-do lists</string>
    <string name="scroll_history_header">All my posts</string>
    <string name="name_of_new_todo">Name of the new todo item</string>
    <string name="loading_new_items">Loading new items</string>
    <string name="hint_for_scrolling_update">Scroll down to update</string>
    <string name="bb_positive">Yes</string>
    <string name="bb_negative">No</string>
    <string name="gift_flower">Flower</string>
    <string name="gift_cake">Cake</string>
    <string name="gift_teddy">Teddy Bear</string>
    <string name="load_community">Loading more posts will consume your coins. Are you sure you are going to do it? You can also shake the phone to load more</string>
    <string name="updating">Updating preferences</string>
    <string name="default_promote">default</string>
    <string name="server_connection">Loading…</string>
    <string name="confirm_for_title">Are you sure to post this?</string>
    <string name="login_waiting">Contacting server for identification…</string>
</resources>
