<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/diary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/title_activity_diary"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:textColor="@color/colorText"/>
  
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="right">

        <Button
            android:id="@+id/favo_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_favorite_white_24dp"
            android:text="@string/favorite"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/repo_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_report_white_24dp"
            android:text="@string/report"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>

